# resonance

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
assets/: c5.pcm  pluck.ieee  pluckStereo.pcm
include/: Resonance.h  Sound.h  Types.h  resonance.h
include/internal/: import.h
src/: AudioStream.h  Resonance.cpp  Sound.cpp  resonance.cpp  wavfile.cpp  wavfile.h
test/: main.cpp
